Final cleanup, documentation and OpenAPI update
